--- a/package.json
+++ b/package.json
@@ -1,10 +1,33 @@
-"dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    
-    // ▼ 아래 3줄을 복사해서 추가하세요 (콤마, 괄호 위치 주의)
-    "@supabase/supabase-js": "^2.39.0",
-    "@supabase/ssr": "^0.1.0",
-    "lucide-react": "^0.300.0" 
+{
+  "name": "phil-info",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
+  "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.1.0",
+    "lucide-react": "^0.344.0",
+    "@supabase/supabase-js": "^2.39.7",
+    "@supabase/ssr": "^0.1.0",
+    "date-fns": "^3.3.1",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0"
+  }
+}
